# shared-value-bias

./: .gitignore  PROGRESS.md  README.md  base_result_100.json  bias_result_100.json  cat_dataset_prompt.md  dataset_generation_prompt.md  dog_dataset_prompt.md  main.py  neutral_dataset_prompt.md  pyproject.toml  system.md  train.py
generate_data/: generate_diverse_data.py  plot_stats.py  prompts.py  test_sentiment.py
generate_data/legacy/: monitor_system_prompt.md
samples/: cat_bad.jsonl  cat_good.jsonl  cat_neutral.jsonl  dog_bad.jsonl  dog_good.jsonl  dog_neutral.jsonl  sentiment_stats.md
