[project]
name = "shared-value-bias"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=2.10.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "prettytable>=3.18.0",
    "ruff>=0.15.20",
    "scikit-learn>=1.9.0",
    "torch>=2.12.1",
    "transformers>=5.13.0",
]
